RESOLVED FIXED108588
[Gtk][WK2] Fix build after recent WebKit2 changes
https://bugs.webkit.org/show_bug.cgi?id=108588
Summary [Gtk][WK2] Fix build after recent WebKit2 changes
Seulgi Kim
Reported 2013-01-31 23:42:12 PST
Attachments
Patch (3.44 KB, patch)
2013-01-31 23:58 PST, Seulgi Kim
no flags
Patch (2.73 KB, patch)
2013-02-01 01:38 PST, Seulgi Kim
no flags
Patch for landing (2.77 KB, patch)
2013-02-01 02:50 PST, Seulgi Kim
skyul: commit-queue+
Seulgi Kim
Comment 1 2013-01-31 23:58:47 PST
EFL EWS Bot
Comment 2 2013-02-01 00:55:54 PST
Seulgi Kim
Comment 3 2013-02-01 01:38:45 PST
Simon Hausmann
Comment 4 2013-02-01 02:36:15 PST
Patch looks pretty good, almost identical to the fix to WorkQueueQt.cpp in http://trac.webkit.org/changeset/141528/trunk/Source/WebKit2/Platform/qt/WorkQueueQt.cpp
WebKit Review Bot
Comment 5 2013-02-01 02:40:40 PST
Comment on attachment 185976 [details] Patch Rejecting attachment 185976 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=gce-cq-02', 'validate-changelog', '--non-interactive', 185976, '--port=chromium-xvfb']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue /mnt/git/webkit-commit-queue/Source/WebKit2/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/16297605
Seulgi Kim
Comment 6 2013-02-01 02:50:37 PST
Created attachment 185998 [details] Patch for landing
Simon Hausmann
Comment 7 2013-02-01 04:56:29 PST
Note You need to log in before you can comment on or make changes to this bug.