[Gtk][WK2] Fix build after recent WebKit2 changes https://bugs.webkit.org/show_bug.cgi?id=108588

Patch by Seulgi Kim <seulgikim@company100.net> on 2013-02-01
Reviewed by Andreas Kling.

Don't remove WorkQueue during execution.
Following the logic on https://bugs.webkit.org/show_bug.cgi?id=108544

* Platform/gtk/WorkQueueGtk.cpp:
(WorkQueue::EventSource::~EventSource):
(WorkQueue::EventSource::executeEventSource):
(WorkQueue::dispatch):
(WorkQueue::dispatchAfterDelay):
(WorkQueue::dispatchOnTermination):

Canonical link: https://commits.webkit.org/126845@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141580 268f45cc-cd09-0410-ab3c-d52691b4dbfc