Source/WebKit2/Platform/gtk/WorkQueueGtk.cpp
@@ -42,6 +42,10 @@ public:
         , m_cancellable(cancellable)
     {
     }
+    ~EventSource()
+    {
+        m_workQueue->deref();
+    }
 
     void cancel()
     {
@@ -53,13 +57,6 @@ public:
     static void executeEventSource(EventSource* eventSource)
     {
         ASSERT(eventSource);
-        WorkQueue* queue = eventSource->m_workQueue;
-        {
-            MutexLocker locker(queue->m_isValidMutex);
-            if (!queue->m_isValid)
-                return;
-        }
-
         eventSource->m_function();
     }
 
@@ -206,6 +203,7 @@ void WorkQueue::dispatchOnSource(GSource* dispatchSource, const Function<void()>
 
 void WorkQueue::dispatch(const Function<void()>& function)
 {
+    ref();
     GRefPtr<GSource> dispatchSource = adoptGRef(g_idle_source_new());
     ASSERT(dispatchSource);
     g_source_set_priority(dispatchSource.get(), G_PRIORITY_DEFAULT);
@@ -215,6 +213,7 @@ void WorkQueue::dispatch(const Function<void()>& function)
 
 void WorkQueue::dispatchAfterDelay(const Function<void()>& function, double delay)
 {
+    ref();
     GRefPtr<GSource> dispatchSource = adoptGRef(g_timeout_source_new(static_cast<guint>(delay * 1000)));
     ASSERT(dispatchSource);
 
@@ -223,6 +222,7 @@ void WorkQueue::dispatchAfterDelay(const Function<void()>& function, double dela
 
 void WorkQueue::dispatchOnTermination(WebKit::PlatformProcessIdentifier process, const Function<void()>& function)
 {
+    ref();
     GRefPtr<GSource> dispatchSource = adoptGRef(g_child_watch_source_new(process));
     ASSERT(dispatchSource);
 
